<resources>
    <string name="app_name">AndroidApplication</string>
    <string name="calculator_str">\t\LifeCycle</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="positive_negative">+/-</string>
    <string name="dot">.</string>
    <string name="c_str">C</string>
    <string name="empty_string" />
</resources>