<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4B000000">

        <TextView
            android:id="@+id/calcLabel2"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:background="#4E4D4D"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/calculator_str"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FF9800"
            android:textSize="28sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/queryView"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/num_0"
            android:textAlignment="textEnd"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calcLabel2" />

        <TextView
            android:id="@+id/resultView"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/empty_string"
            android:textAlignment="textEnd"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/queryView"
            app:layout_constraintTop_toBottomOf="@+id/queryView" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/queryView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FCFFFFFF"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonCE"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="CE"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonC"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="@string/c_str"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonBS"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="BS"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonPlus"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="+"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="@string/num_1"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="@string/num_2"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="@string/num_3"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonMinus"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="-"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="@string/num_4"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="@string/num_5"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="@string/num_6"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonMultiply"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="*"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="@string/num_7"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="@string/num_8"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="@string/num_9"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonDivide"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="/"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonPosNeg"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="@string/positive_negative"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button0"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="@string/num_0"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonDot"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="@string/dot"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonEqual"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:insetLeft="@dimen/inset_button"
                    android:insetRight="@dimen/inset_button"
                    android:text="="
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>